--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
 
   <head>
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124925827-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-124925827-1');
+    </script>
+
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Scrolling Nav - Start Bootstrap Template</title>
+    <title>David Semedo - Personal Web Page</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +35,7 @@
 
   </head>
 
-  <a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+  <a href="javascript:" id="return-to-top"><i class="fas fa-chevron-up"></i></a>
 
 
   <body id="page-top">
@@ -41,10 +53,13 @@
               <a class="nav-link js-scroll-trigger" href="#aboutme">About me</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#activities">Activities</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+              <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
             </li>
           </ul>
         </div>
@@ -54,17 +69,23 @@
     <header class="bg-info text-white">
       <div class="container">
         <div id="headerblob">
-        <img src="me.jpg" class="rounded-circle imgme">
-        <div id="headertext" class="clearfix">
-          <div id="htname">David Semedo</div>
-          <div id="htdesc">Ph.D. student at NOVA University of Lisbon</div>
-          <div id="htem">dsemedo _at_ campus.fct.unl.pt</div>
+        <img src="images/me.jpg" class="rounded-circle imgme">
+        <div id="headertext" class="clearfix pl-5">
+          <div id="htname" class="ligh_dark_text" style="margin-top: -10px;">David Semedo</div>
+          <div id="htdesc" class="ligh_dark_text">Ph.D. student at NOVA University of Lisbon</div>
+          <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:dsemedo@campus.fct.unl.pt">dsemedo@campus.fct.unl.pt</a></div>
           <div id="icons" >
-            <div class="svgico inline">
-              <a href="https://twitter.com/davidfsemedo" target="_blank"><img src="icons/03-twitter.svg"></a>
+            <div class="inline"  style="margin: 4px 0 0 0px;">
+              <a href="https://www.linkedin.com/in/david-semedo" target="_blank"><img src="icons/linkedin_inverted.png" width="50px"></a>
             </div>
-            <div class="svgico inline">
+            <div class="inline"  style="margin: 4px 0 0 4px;">
+              <a href="https://scholar.google.pt/citations?user=yvWC4jsAAAAJ" target="_blank"><img src="icons/scholar_inverted.png" width="45px"></a>
+            </div>
+            <div class="svgico inline" style="margin: 0px 0 0 4px;">
               <a href="https://github.com/davidfsemedo/" target="_blank"><img src="icons/octocat.svg" width="56px"></a>
+            </div>
+            <div class="svgico inline" style="margin: 0px 0 0 4px;">
+              <a href="https://twitter.com/davidfsemedo" target="_blank"><img src="icons/03-twitter.svg"></a>
             </div>
           </div>
         </div>
@@ -74,7 +95,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About this page</h2>
+            <h2>About Me</h2>
             <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
             <ul>
               <li>Clickable nav links that smooth scroll to page sections</li>
@@ -87,27 +108,49 @@
       </div>
     </section>
 
+    <section id="publications">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Publications</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="activities" class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Services we offer</h2>
+            <h2>Activities</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+            This template features:</p>
+            <ul>
+              <li>Clickable nav links that smooth scroll to page sections</li>
+              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
+              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
+              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
+
+    <section id="teaching" class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Teaching</h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="publications">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <h2>Contact us</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
