--- a/index.html
+++ b/index.html
@@ -69,23 +69,23 @@
     <header class="bg-info text-white">
       <div class="container">
         <div id="headerblob">
-        <img src="images/me.jpg" class="rounded-circle imgme">
+        <img src="media/me.jpg" class="rounded-circle imgme">
         <div id="headertext" class="clearfix pl-5">
           <div id="htname" class="ligh_dark_text" style="margin-top: -10px;">David Semedo</div>
           <div id="htdesc" class="ligh_dark_text">Ph.D. student at NOVA University of Lisbon</div>
           <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:dsemedo@campus.fct.unl.pt">dsemedo@campus.fct.unl.pt</a></div>
           <div id="icons" >
             <div class="inline"  style="margin: 4px 0 0 0px;">
-              <a href="https://www.linkedin.com/in/david-semedo" target="_blank"><img src="icons/linkedin_inverted.png" width="50px"></a>
+              <a href="https://www.linkedin.com/in/david-semedo" target="_blank"><img src="media/icons/linkedin_inverted.png" width="50px"></a>
             </div>
             <div class="inline"  style="margin: 4px 0 0 4px;">
-              <a href="https://scholar.google.pt/citations?user=yvWC4jsAAAAJ" target="_blank"><img src="icons/scholar_inverted.png" width="45px"></a>
+              <a href="https://scholar.google.pt/citations?user=yvWC4jsAAAAJ" target="_blank"><img src="media/icons/scholar_inverted.png" width="45px"></a>
             </div>
             <div class="svgico inline" style="margin: 0px 0 0 4px;">
-              <a href="https://github.com/davidfsemedo/" target="_blank"><img src="icons/octocat.svg" width="56px"></a>
+              <a href="https://github.com/davidfsemedo/" target="_blank"><img src="media/icons/octocat.svg" width="56px"></a>
             </div>
             <div class="svgico inline" style="margin: 0px 0 0 4px;">
-              <a href="https://twitter.com/davidfsemedo" target="_blank"><img src="icons/03-twitter.svg"></a>
+              <a href="https://twitter.com/davidfsemedo" target="_blank"><img src="media/icons/03-twitter.svg"></a>
             </div>
           </div>
         </div>
@@ -95,31 +95,57 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Me</h2>
-            <p class="lead">This is a great place to talk about your webpage. This template is purposefully unstyled so you can use it as a boilerplate or starting point for you own landing page designs! This template features:</p>
-            <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
-            </ul>
+            <h2>About Me</h2>  
+            <p >My name is David Semedo, and I'm a Ph.D. Student at <a href="https://www.fct.unl.pt/en " target="_blank">FCT-NOVA</a>, from the NOVA University of Lisbon. I am a researcher of the <a href="https://www.linkedin.com/in/david-semedo" target="_blank">Web and Media Search group</a> (NOVA Search), at the <a href="http://nova-lincs.di.fct.unl.pt/" target="_blank">NOVA Laboratory for Computer Science and Informatics </a>(NOVA LINCS). My advisor is <a href="http://ctp.di.fct.unl.pt/~jmag/" target="_blank">Professor João Magalhães.</a></p>
+            <p >
+            My current work focuses on Temporal Cross-modal Retrieval and Neural-based Representation Learning.</p>
+
+
+            <p ><strong>Research interests:</strong> Cross-modal retrieval, Representation Learning, Deep Learning, Machine Learning, Artificial Intelligence.</p>
+
+            <strong>Academic degrees:</strong>
+            <p><strong>2015</strong> M.Sc. in Computer Science by NOVA University of Lisbon [<a
+                    href="https://run.unl.pt/bitstream/10362/16173/1/Semedo_2015.pdf" target="_blank">Thesis</a>]
+                [<a href="publications/cite/msc.bib" target="_blank">Bib</a>] under the supervision of <a
+                        href="http://userweb.fct.unl.pt/~pb/">Prof. Pedro Barahona</a> and
+                <a href="http://asc.di.fct.unl.pt/~pm/">Prof. Pedro Medeiros</a>.</p>
+
+            <p><strong>2013</strong> B.Sc. in Computer Science by NOVA University of Lisbon.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="publications">
+    <section id="publications"  class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Publications</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
-          </div>
+           <p><b>Temporal Cross-Media Retrieval with Soft-Smoothing</b><br>
+                    David Semedo, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018. (To Appear)<br>
+                    [PDF]
+                    [Bib]
+            </p> 
+           <p><b>Inferring User Gender from User Generated Visual Content on a Deep Semantic Space</b><br>
+                    David Semedo, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018. (To Appear)<br>
+                    [PDF]
+                    [Bib]
+            </p>
+            <p><b>NovaSearch at ImageCLEFmed 2016 Subfigure Classification Task</b><br>
+                    David Semedo, João Magalhães. Working Notes of CLEF 2016 - Conference and Labs of the Evaluation forum, Évora, Portugal, Sep. 2016.<br>
+                     [<a href="publications/imageclef_medical_cnn.pdf" target="_blank">PDF</a>]
+                    [<a href="publications/cite/imageclef_medical_cnn.bib" target="_blank">Bib</a>]
+            </p>
+            <p><b>Asynchronous Parallel Ant-Colony Optimization Strategies: Application to the Multi-Depot Vehicle Scheduling Problem with Line Exchanges</b><br>
+                    David Semedo, Pedro Barahona, Pedro Medeiros. 7th INForum, Covilhã, Portugal, Sep. 2015.<br>
+                     [<a href="publications/mdvsp_parallel_aco_inforum2015.pdf" target="_blank">PDF</a>]
+                    [<a href="publications/cite/mdvsp_parallel_aco_inforum2015.bib" target="_blank">Bib</a>]
+            </p>       
         </div>
       </div>
     </section>
 
-    <section id="activities" class="bg-light">
+    <section id="activities">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
@@ -144,7 +170,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Teaching</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
+            <p><strong>2015</strong> Algorithms and Data Structures - Computer Science course.</p>
+            <p><strong>2014</strong> Algorithms and Data Structures - Electrical and Computer Engineering course.</p>
           </div>
         </div>
       </div>
@@ -153,9 +180,9 @@
 
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 ">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; David Semedo 2018</p>
       </div>
       <!-- /.container -->
     </footer>
