Added activities and projects

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#projects">Projects and Others</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -150,13 +153,24 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Activities</h2>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit inventore, expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo assumenda laborum vel, labore ut velit dignissimos.</p>
-            This template features:</p>
+            <p >Please find below a list of my most relevant academic activities, grouped by year.</p>
+            <p><strong>2018:</strong>
             <ul>
-              <li>Clickable nav links that smooth scroll to page sections</li>
-              <li>Responsive behavior when clicking nav links perfect for a one page website</li>
-              <li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
-              <li>Minimal custom CSS so you are free to explore your own unique design options</li>
+              <li><strong>Reviewer</strong> for ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2018).</p></li>
+              <li><strong>Reviewer</strong> for ACM International Conference on Multimedia Retrieval 2018 (ICMR 2018).</p></li>
+              <li><strong>Reviewer</strong> for International Conference on Theory and Practice of Digital Libraries 2018 (TPDL 2018).</p></li>
+            </ul>
+            <p><strong>2017:</strong>
+            <ul>
+              <li><strong>Reviewer</strong> for ACM International Conference on Multimedia Retrieval 2017 (ICMR 2017).</p></li>
+              <li><strong>Reviewer</strong> for IEEE International Conference on Multimedia and Expo 2017 (ICME 2017).</p></li>
+            </ul>
+            <p><strong>2016:</strong>
+            <ul>
+              <li><strong>Reviewer</strong> for ACM International Conference on Multimedia Retrieval 2016 (ICMR 2016).</p></li>
+              <li><strong>Monitor</strong> at the LxMLS - 2016 Lisbon Machine Learning Summer School.</p></li>
+              <li><strong>Poster Presentation</strong> at CLEF 2016 - Conference and Labs of the Evaluation Forum.</p></li>
+
             </ul>
           </div>
         </div>
@@ -173,6 +187,20 @@
             <p><strong>2015</strong> Algorithms and Data Structures - Computer Science course.</p>
             <p><strong>2014</strong> Algorithms and Data Structures - Electrical and Computer Engineering course.</p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="bg-light">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Projects and Others</h2>
+             <p><strong>2018-Present -</strong> <b>Visual Stories: Cross-modal Image and Video Search/Browsing Tool for Social Media Event Data (Ongoing Work) [<a href="https://visualstories.novasearch.org/" target="_blank">Link</a>]</b><br>
+            </p>  
+             <p><strong>2016 -</strong> <b>Classical and Neural Language Models Survey [<a href="publications/Statistical_Learning_Survey___Language_Models.pdf" target="_blank">PDF</a>]</b><br>
+                    Statistical Learning Course final project, lectured by <a href="http://www.lx.it.pt/~mtf/" target="_blank">Prof. Mário Figueiredo</a>.<br>
+            </p>  
         </div>
       </div>
     </section>
