Implemented mobile layout

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="headerblob">
         <img src="media/me.jpg" class="rounded-circle imgme">
         <div id="headertext" class="clearfix pl-5">
-          <div id="htname" class="ligh_dark_text" style="margin-top: -10px;">David Semedo</div>
+          <div id="htname" class="ligh_dark_text">David Semedo</div>
           <div id="htdesc" class="ligh_dark_text">Ph.D. student at NOVA University of Lisbon</div>
           <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:dsemedo@campus.fct.unl.pt">dsemedo@campus.fct.unl.pt</a></div>
           <div id="icons" >
