Removed Mario url

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
              <p><strong>2018-Present -</strong> <b>Visual Stories: Cross-modal Image and Video Search/Browsing Tool for Social Media Event Data (Ongoing Work) [<a href="https://visualstories.novasearch.org/" target="_blank">Link</a>]</b><br>
             </p>  
              <p><strong>2016 -</strong> <b>Classical and Neural Language Models Survey [<a href="publications/Statistical_Learning_Survey___Language_Models.pdf" target="_blank">PDF</a>]</b><br>
-                    Statistical Learning Course final project, lectured by <a href="http://www.lx.it.pt/~mtf/" target="_blank">Prof. Mário Figueiredo</a>.<br>
+                    Statistical Learning Course final project, lectured by Prof. Mário Figueiredo<br>
             </p>  
         </div>
       </div>
