--- a/index.html
+++ b/index.html
@@ -125,10 +125,14 @@
           <div class="col-lg-8 mx-auto">
             <h2>Publications</h2>
            <p><b>Temporal Cross-Media Retrieval with Soft-Smoothing</b><br>
-                    David Semedo, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018. (To Appear)<br>
-                    [PDF]
-                    [Bib]
-            </p> 
+                    David Semedo, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018.<br>
+                    [<a href="https://dl.acm.org/citation.cfm?id=3240665" target="_blank">PDF</a>]
+                    [<a href="publications/cite/temporal_cross_media_acmmm2018.bib" target="_blank">Bib</a>] 
+            </p>
+           <p><b>TRECVID 2018 Linking Task: Social Media Video Storytelling</b><br>
+                    João Magalhães, David Semedo, Saverio Blasi. TRECVID 2018.<br>
+                    [<a href="https://www-nlpir.nist.gov/projects/tv2018/Tasks/lnk/trecvid2018-lnk-guidelines-v2.pdf" target="_blank">PDF</a>] 
+            </p>  
            <p><b>Inferring User Gender from User Generated Visual Content on a Deep Semantic Space</b><br>
                     David Semedo, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018. (To Appear)<br>
                     [PDF]
@@ -184,8 +188,9 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Teaching</h2>
-            <p><strong>2015</strong> Algorithms and Data Structures - Computer Science course.</p>
-            <p><strong>2014</strong> Algorithms and Data Structures - Electrical and Computer Engineering course.</p>
+            <p><strong>2018</strong> Web Search and Data Mining - M.Sc. Computer Science course. [<a href="http://ctp.di.fct.unl.pt/~jmag/ws/" target="_blank">Webpage</a>]</p>
+            <p><strong>2015</strong> Algorithms and Data Structures - B.Sc. Computer Science course.</p>
+            <p><strong>2014</strong> Algorithms and Data Structures - B.Sc. Electrical and Computer Engineering course.</p>
           </div>
         </div>
       </div>
