Added ECIR paper

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Publications</h2>
+            <p><b>Dynamic-Keyword Extraction from Social Media</b><br>
+                    David Semedo, and João Magalhães. European Conference on Information Retrieval 2019, Cologne, Germany, April 2019.<br>
+                    [To Appear] 
+            </p>
            <p><b>Temporal Cross-Media Retrieval with Soft-Smoothing</b><br>
                     David Semedo, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018.<br>
                     [<a href="https://dl.acm.org/citation.cfm?id=3240665" target="_blank">PDF</a>]
