Updated info regarding Dynamic Keywords Extraction paper

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
             <h2>Publications</h2>
             <p><b>Dynamic-Keyword Extraction from Social Media</b><br>
                     David Semedo, and João Magalhães. European Conference on Information Retrieval 2019, Cologne, Germany, April 2019.<br>
-                    [To Appear] 
+                     [<a href="https://link.springer.com/chapter/10.1007/978-3-030-15712-8_62" target="_blank">PDF</a>]
+                     [<a href="publications/cite/dynamic_keywords_2019.bib" target="_blank">Bib</a>] 
             </p>
            <p><b>Temporal Cross-Media Retrieval with Soft-Smoothing</b><br>
                     David Semedo, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018.<br>
