Updated info regarding EUSIPCO 2018 paper

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
             </p>  
            <p><b>Inferring User Gender from User Generated Visual Content on a Deep Semantic Space</b><br>
                     David Semedo, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018. (To Appear)<br>
-                    [PDF]
-                    [Bib]
+                    [<a href=" https://ieeexplore.ieee.org/document/8553425" target="_blank">PDF</a>]
+                    [<a href="publications/cite/gender_classification_eusipco2018.bib" target="_blank">Bib</a>]
             </p>
             <p><b>NovaSearch at ImageCLEFmed 2016 Subfigure Classification Task</b><br>
                     David Semedo, João Magalhães. Working Notes of CLEF 2016 - Conference and Labs of the Evaluation forum, Évora, Portugal, Sep. 2016.<br>
