--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     [<a href="https://www-nlpir.nist.gov/projects/tv2018/Tasks/lnk/trecvid2018-lnk-guidelines-v2.pdf" target="_blank">PDF</a>] 
             </p>  
            <p><b>Inferring User Gender from User Generated Visual Content on a Deep Semantic Space</b><br>
-                    David Semedo, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018. (To Appear)<br>
+                    David Semedo, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018.<br>
                     [<a href=" https://ieeexplore.ieee.org/document/8553425" target="_blank">PDF</a>]
                     [<a href="publications/cite/gender_classification_eusipco2018.bib" target="_blank">Bib</a>]
             </p>
