Added cv. Added new publication.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
     <header class="bg-info text-white">
       <div class="container">
         <div id="headerblob">
-        <img src="media/me.jpg" class="rounded-circle imgme">
+        <img src="media/me.jpg" class="rounded imgme ">
         <div id="headertext" class="clearfix pl-5">
           <div id="htname" class="ligh_dark_text">David Semedo</div>
           <div id="htdesc" class="ligh_dark_text">Ph.D. student at NOVA University of Lisbon</div>
           <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:dsemedo@campus.fct.unl.pt">dsemedo@campus.fct.unl.pt</a></div>
+          <div id="htcv" class="ligh_dark_text"><a href="cv/cv_david.pdf" style="color:white" target="_blank"><strong>Curriculum Vitæ</strong></a></div>
           <div id="icons" >
             <div class="inline"  style="margin: 4px 0 0 0px;">
               <a href="https://www.linkedin.com/in/david-semedo" target="_blank"><img src="media/icons/linkedin_inverted.png" width="50px"></a>
@@ -98,22 +99,25 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>About Me</h2>  
-            <p >My name is David Semedo, and I'm a Ph.D. Student at <a href="https://www.fct.unl.pt/en " target="_blank">FCT-NOVA</a>, from the NOVA University of Lisbon. I am a researcher of the <a href="https://www.linkedin.com/in/david-semedo" target="_blank">Web and Media Search group</a> (NOVA Search), at the <a href="http://nova-lincs.di.fct.unl.pt/" target="_blank">NOVA Laboratory for Computer Science and Informatics </a>(NOVA LINCS). My advisor is <a href="http://ctp.di.fct.unl.pt/~jmag/" target="_blank">Professor João Magalhães.</a></p>
-            <p >
-            My current work focuses on Temporal Cross-modal Retrieval and Neural-based Representation Learning.</p>
+            <h2>About Me</h2>
+            <p >My name is David Semedo, and I'm a Ph.D. Student at <a href="https://www.fct.unl.pt/en " target="_blank">NOVA School of Science and Technology</a>, from the NOVA University of Lisbon. I am a researcher of the <a href="https://www.linkedin.com/in/david-semedo" target="_blank">Web and Media Search group</a> (NOVA Search), at the <a href="http://nova-lincs.di.fct.unl.pt/" target="_blank">NOVA Laboratory for Computer Science and Informatics </a>(NOVA LINCS). My advisor is <a href="http://ctp.di.fct.unl.pt/~jmag/" target="_blank">Professor João Magalhães.</a></p>
+
+            <p >My current work focuses on <strong>Temporal Cross-modal Embeddings</strong> and <strong>Neural-based Representation Learning</strong>. In this topic, I address the semantic gap between visual and textual modalities, by modelling cross-modal data interactions over time, in embedding spaces</p>
+
+            <p ><strong>Expertise and Interests:</strong> Multimodal machine learning. Computer vision and natural language processing methods for video, image and text modelling. My research interests lye around the field of multimedia understanding, namely in the intersection of computer vision and NLP, Deep Neural Networks, Artificial Intelligence and Data Mining.</p>
 
 
-            <p ><strong>Research interests:</strong> Cross-modal retrieval, Representation Learning, Deep Learning, Machine Learning, Artificial Intelligence.</p>
 
             <strong>Academic degrees:</strong>
-            <p><strong>2015</strong> M.Sc. in Computer Science by NOVA University of Lisbon [<a
+             <p><strong>2016-Present</strong> Ph.D. in Computer Science at NOVA School of Science and Technology under the supervision of <a href="http://ctp.di.fct.unl.pt/~jmag/">Prof. João Magalhães</a>.</p>
+
+            <p><strong>2015</strong> M.Sc. in Computer Science by NOVA School of Science and Technology [<a
                     href="https://run.unl.pt/bitstream/10362/16173/1/Semedo_2015.pdf" target="_blank">Thesis</a>]
                 [<a href="publications/cite/msc.bib" target="_blank">Bib</a>] under the supervision of <a
                         href="http://userweb.fct.unl.pt/~pb/">Prof. Pedro Barahona</a> and
                 <a href="http://asc.di.fct.unl.pt/~pm/">Prof. Pedro Medeiros</a>.</p>
 
-            <p><strong>2013</strong> B.Sc. in Computer Science by NOVA University of Lisbon.</p>
+            <p><strong>2013</strong> B.Sc. in Computer Science by NOVA School of Science and Technology.</p>
           </div>
         </div>
       </div>
@@ -124,35 +128,40 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Publications</h2>
+             <p><b>A Benchmark of Visual Storytelling in Social Media</b><br>
+                    Gonçalo Marcelino, <strong>David Semedo</strong>, André Mourão, Saverio Blasi, Marta Mrak, and João Magalhães. International Conference on Multimedia Retrieval 2019, Ottawa, Canada, June 2019.<br>
+                     [<a href="https://dl.acm.org/citation.cfm?id=3325047&preflayout=tabs" target="_blank">PDF</a>]
+                     [<a href="publications/cite/visualstories_icmr2019.bib" target="_blank">Bib</a>]
+            </p>
             <p><b>Dynamic-Keyword Extraction from Social Media</b><br>
-                    David Semedo, and João Magalhães. European Conference on Information Retrieval 2019, Cologne, Germany, April 2019.<br>
+                    <strong>David Semedo</strong>, and João Magalhães. European Conference on Information Retrieval 2019, Cologne, Germany, April 2019.<br>
                      [<a href="https://link.springer.com/chapter/10.1007/978-3-030-15712-8_62" target="_blank">PDF</a>]
-                     [<a href="publications/cite/dynamic_keywords_2019.bib" target="_blank">Bib</a>] 
+                     [<a href="publications/cite/dynamic_keywords_2019.bib" target="_blank">Bib</a>]
             </p>
            <p><b>Temporal Cross-Media Retrieval with Soft-Smoothing</b><br>
-                    David Semedo, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018.<br>
+                    <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018.<br>
                     [<a href="https://dl.acm.org/citation.cfm?id=3240665" target="_blank">PDF</a>]
-                    [<a href="publications/cite/temporal_cross_media_acmmm2018.bib" target="_blank">Bib</a>] 
+                    [<a href="publications/cite/temporal_cross_media_acmmm2018.bib" target="_blank">Bib</a>]
             </p>
            <p><b>TRECVID 2018 Linking Task: Social Media Video Storytelling</b><br>
-                    João Magalhães, David Semedo, Saverio Blasi. TRECVID 2018.<br>
-                    [<a href="https://www-nlpir.nist.gov/projects/tv2018/Tasks/lnk/trecvid2018-lnk-guidelines-v2.pdf" target="_blank">PDF</a>] 
-            </p>  
+                    João Magalhães, <strong>David Semedo</strong>, Saverio Blasi. TRECVID 2018.<br>
+                    [<a href="https://www-nlpir.nist.gov/projects/tv2018/Tasks/lnk/trecvid2018-lnk-guidelines-v2.pdf" target="_blank">PDF</a>]
+            </p>
            <p><b>Inferring User Gender from User Generated Visual Content on a Deep Semantic Space</b><br>
-                    David Semedo, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018.<br>
+                    <strong>David Semedo</strong>, Flávio Martins, and João Magalhães. 26th European Signal Processing Conference (EUSIPCO 2018), Rome, Italy, 2018.<br>
                     [<a href=" https://ieeexplore.ieee.org/document/8553425" target="_blank">PDF</a>]
                     [<a href="publications/cite/gender_classification_eusipco2018.bib" target="_blank">Bib</a>]
             </p>
             <p><b>NovaSearch at ImageCLEFmed 2016 Subfigure Classification Task</b><br>
-                    David Semedo, João Magalhães. Working Notes of CLEF 2016 - Conference and Labs of the Evaluation forum, Évora, Portugal, Sep. 2016.<br>
+                    <strong>David Semedo</strong>, João Magalhães. Working Notes of CLEF 2016 - Conference and Labs of the Evaluation forum, Évora, Portugal, Sep. 2016.<br>
                      [<a href="publications/imageclef_medical_cnn.pdf" target="_blank">PDF</a>]
                     [<a href="publications/cite/imageclef_medical_cnn.bib" target="_blank">Bib</a>]
             </p>
             <p><b>Asynchronous Parallel Ant-Colony Optimization Strategies: Application to the Multi-Depot Vehicle Scheduling Problem with Line Exchanges</b><br>
-                    David Semedo, Pedro Barahona, Pedro Medeiros. 7th INForum, Covilhã, Portugal, Sep. 2015.<br>
+                    <strong>David Semedo</strong>, Pedro Barahona, Pedro Medeiros. 7th INForum, Covilhã, Portugal, Sep. 2015.<br>
                      [<a href="publications/mdvsp_parallel_aco_inforum2015.pdf" target="_blank">PDF</a>]
                     [<a href="publications/cite/mdvsp_parallel_aco_inforum2015.bib" target="_blank">Bib</a>]
-            </p>       
+            </p>
         </div>
       </div>
     </section>
@@ -186,7 +195,7 @@
       </div>
     </section>
 
-    
+
 
     <section id="teaching" class="bg-light">
       <div class="container">
@@ -207,10 +216,10 @@
           <div class="col-lg-8 mx-auto">
             <h2>Projects and Others</h2>
              <p><strong>2018-Present -</strong> <b>Visual Stories: Cross-modal Image and Video Search/Browsing Tool for Social Media Event Data (Ongoing Work) [<a href="https://visualstories.novasearch.org/" target="_blank">Link</a>]</b><br>
-            </p>  
+            </p>
              <p><strong>2016 -</strong> <b>Classical and Neural Language Models Survey [<a href="publications/Statistical_Learning_Survey___Language_Models.pdf" target="_blank">PDF</a>]</b><br>
                     Statistical Learning Course final project, lectured by Prof. Mário Figueiredo<br>
-            </p>  
+            </p>
         </div>
       </div>
     </section>
