Added new ACM MM papers and updated reviewer section.

--- a/index.html
+++ b/index.html
@@ -128,6 +128,17 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Publications</h2>
+            <p><b>Diachronic Cross-modal Embeddings</b><br>
+                    <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2019, Nice, France, Oct. 2019.<br>
+                    [<a href="https://novasearch.org/multimodal-diachronic-models/" target="_blank">Project Page (w/ Dataset)</a>]
+                    [<a href="https://arxiv.org/abs/1909.13689" target="_blank">PDF</a>]
+                    [Bib]
+            </p>
+            <p><b>  Cross-Modal Subspace Learning with Scheduled Adaptive Margin Constraints </b><br>
+                    <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2019, Nice, France, Oct. 2019.<br>
+                    [<a href="https://arxiv.org/abs/1909.13733" target="_blank">PDF</a>]
+                    [Bib]
+            </p>
              <p><b>A Benchmark of Visual Storytelling in Social Media</b><br>
                     Gonçalo Marcelino, <strong>David Semedo</strong>, André Mourão, Saverio Blasi, Marta Mrak, and João Magalhães. International Conference on Multimedia Retrieval 2019, Ottawa, Canada, June 2019.<br>
                      [<a href="https://dl.acm.org/citation.cfm?id=3325047&preflayout=tabs" target="_blank">PDF</a>]
@@ -139,7 +150,7 @@
                      [<a href="publications/cite/dynamic_keywords_2019.bib" target="_blank">Bib</a>]
             </p>
            <p><b>Temporal Cross-Media Retrieval with Soft-Smoothing</b><br>
-                    <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia Conference 2018, Seoul, Korea, Oct. 2018.<br>
+                    <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2018, Seoul, Korea, Oct. 2018.<br>
                     [<a href="https://dl.acm.org/citation.cfm?id=3240665" target="_blank">PDF</a>]
                     [<a href="publications/cite/temporal_cross_media_acmmm2018.bib" target="_blank">Bib</a>]
             </p>
@@ -172,6 +183,10 @@
           <div class="col-lg-8 mx-auto">
             <h2>Activities</h2>
             <p >Please find below a list of my most relevant academic activities, grouped by year.</p>
+             <p><strong>2019:</strong>
+            <ul>
+              <li><strong>Reviewer</strong> for ACM Multimedia 2019 (MM 2019).</p></li>
+            </ul>
             <p><strong>2018:</strong>
             <ul>
               <li><strong>Reviewer</strong> for ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR 2018).</p></li>
