Added trecvid2018 paper

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
                     [<a href="https://dl.acm.org/citation.cfm?id=3240665" target="_blank">PDF</a>]
                     [<a href="publications/cite/temporal_cross_media_acmmm2018.bib" target="_blank">Bib</a>]
             </p>
+            <p><b>TRECVID 2018: Benchmarking video activity detection, video captioning and matching, video storytelling linking and video search</b><br>
+                    Awad, George, Asad Butt, Keith Curtis, Yooyoung Lee, Jonathan Fiscus, Afzad Godil, David Joy, Andrew Delgado, Alan Smeaton, Yvette Graham, et al.. Proceedings of TRECVID 2018, 2018<br>
+                    [<a href="https://www-nlpir.nist.gov/projects/tv2018/tv18.workshop.notebook/tv18.papers/tv18overview.pdf" target="_blank">PDF</a>]
+                    [<a href="publications/cite/trecvid2018.bib" target="_blank">Bib</a>]
+            </p>
            <p><b>TRECVID 2018 Linking Task: Social Media Video Storytelling</b><br>
                     João Magalhães, <strong>David Semedo</strong>, Saverio Blasi. TRECVID 2018.<br>
                     [<a href="https://www-nlpir.nist.gov/projects/tv2018/Tasks/lnk/trecvid2018-lnk-guidelines-v2.pdf" target="_blank">PDF</a>]
