Added bibtex files to ACM MM'19 papers

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
                     <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2019, Nice, France, Oct. 2019.<br>
                     [<a href="https://novasearch.org/multimodal-diachronic-models/" target="_blank">Project Page (w/ Dataset)</a>]
                     [<a href="https://dl.acm.org/citation.cfm?id=3351036" target="_blank">PDF</a>]
-                    [Bib]
+                    [<a href="publications/cite/diachronic_embeddings.bib" target="_blank">Bib</a>]
             </p>
             <p><b>  Cross-Modal Subspace Learning with Scheduled Adaptive Margin Constraints </b><br>
                     <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2019, Nice, France, Oct. 2019.<br>
                     [<a href="https://dl.acm.org/citation.cfm?id=3351030" target="_blank">PDF</a>]
-                    [Bib]
+                    [<a href="publications/cite/adaptive_margins.bib" target="_blank">Bib</a>]
             </p>
              <p><b>A Benchmark of Visual Storytelling in Social Media</b><br>
                     Gonçalo Marcelino, <strong>David Semedo</strong>, André Mourão, Saverio Blasi, Marta Mrak, and João Magalhães. International Conference on Multimedia Retrieval 2019, Ottawa, Canada, June 2019.<br>
