--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
             <p >Please find below a list of my most relevant academic activities, grouped by year.</p>
              <p><strong>2019:</strong>
             <ul>
-              <li><strong>Reviewer</strong> for ACM Multimedia 2019 (MM 2019).</p></li>
+              <li><strong>Seminar Talk:</strong>  Bridging Vision and Language over Time with Neural Cross-modal Embeddings.  [<a href="http://nova-lincs.di.fct.unl.pt/seminar/442" target="_blank">Details</a>]</p></li>
+              <li><strong>PC Member</strong> for ACM Multimedia 2019 (MM 2019).</p></li>
             </ul>
             <p><strong>2018:</strong>
             <ul>
