--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Teaching</h2>
             <p><strong>2018</strong> Web Search and Data Mining - M.Sc. Computer Science course. [<a href="http://ctp.di.fct.unl.pt/~jmag/ws/" target="_blank">Webpage</a>]</p>
+            <p><strong>2016</strong> Lab Instructor at LxMLS - 2016 Lisbon Machine Learning Summer School. [<a href="http://lxmls.it.pt/2016/" target="_blank">Webpage</a>]</p>
             <p><strong>2015</strong> Algorithms and Data Structures - B.Sc. Computer Science course.</p>
             <p><strong>2014</strong> Algorithms and Data Structures - B.Sc. Electrical and Computer Engineering course.</p>
           </div>
