--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div id="headertext" class="clearfix pl-5">
           <div id="htname" class="ligh_dark_text">David Semedo</div>
           <div id="htdesc" class="ligh_dark_text">Ph.D. student at NOVA University of Lisbon</div>
-          <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:df.semedo@campus.fct.unl.pt">dsemedo@campus.fct.unl.pt</a></div>
+          <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:df.semedo@campus.fct.unl.pt">df.semedo@campus.fct.unl.pt</a></div>
           <div id="htcv" class="ligh_dark_text"><a href="cv/cv_david.pdf" style="color:white" target="_blank"><strong>Curriculum Vitæ</strong></a></div>
           <div id="icons" >
             <div class="inline"  style="margin: 4px 0 0 0px;">
