--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <header class="bg-info text-white">
       <div class="container">
         <div id="headerblob">
-        <img src="media/me.jpg" class="rounded imgme ">
+        <img src="media/photo.jpg" class="rounded imgme ">
         <div id="headertext" class="clearfix pl-5">
           <div id="htname" class="ligh_dark_text">David Semedo</div>
-          <div id="htdesc" class="ligh_dark_text">Ph.D. student at NOVA University of Lisbon</div>
-          <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:df.semedo@campus.fct.unl.pt">df.semedo@campus.fct.unl.pt</a></div>
+          <div id="htdesc" class="ligh_dark_text">Ph.D. Researcher at NOVA University of Lisbon</div>
+          <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:df.semedo@fct.unl.pt">df.semedo@fct.unl.pt</a></div>
           <div id="htcv" class="ligh_dark_text"><a href="cv/cv_david.pdf" style="color:white" target="_blank"><strong>Curriculum Vitæ</strong></a></div>
           <div id="icons" >
             <div class="inline"  style="margin: 4px 0 0 0px;">
@@ -100,34 +100,56 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>About Me</h2>
-            <p >My name is David Semedo, and I'm a Ph.D. Student at <a href="https://www.fct.unl.pt/en " target="_blank">NOVA School of Science and Technology</a>, from the NOVA University of Lisbon. I am a researcher of the <a href="https://www.linkedin.com/in/david-semedo" target="_blank">Web and Media Search group</a> (NOVA Search), at the <a href="http://nova-lincs.di.fct.unl.pt/" target="_blank">NOVA Laboratory for Computer Science and Informatics </a>(NOVA LINCS). My advisor is <a href="http://ctp.di.fct.unl.pt/~jmag/" target="_blank">Professor João Magalhães.</a></p>
 
-            <p >My current work focuses on <strong>Temporal Cross-modal Embeddings</strong> and <strong>Neural-based Representation Learning</strong>. In this topic, I address the semantic gap between visual and textual modalities, by modelling cross-modal data interactions over time, in embedding spaces</p>
+            <p >I'm a Researcher at the <a href="http://nova-lincs.di.fct.unl.pt/" target="_blank">NOVA Laboratory for Computer Science and Informatics </a>(NOVA LINCS), from  <a href="https://www.fct.unl.pt/en " target="_blank">NOVA School of Science and Technology</a> of NOVA University of Lisbon. 
 
-            <p ><strong>Expertise and Interests:</strong> Multimodal machine learning. Computer vision and natural language processing methods for video, image and text modelling. My research interests lye around the field of multimedia understanding, namely in the intersection of computer vision and NLP, Deep Neural Networks, Artificial Intelligence and Data Mining.</p>
+            <p> My work focuses on <strong>bridging vision and language for multimedia understanding </strong>. I research deep learning approaches to address the semantic gap between visual and textual modalities. Currently working on Deep learning models for Multimedia, Multimodal and Cross-modal embeddings, and Visual Dialog systems.</p>
 
+            <p ><strong>Expertise and Interests:</strong> Multimedia Understanding. Multimodal machine learning. Neural-based Representation Learning. Computer vision and natural language processing methods for video, image and text modelling. My research interests lye around the field of multimedia understanding, namely in the intersection of computer vision and NLP, Deep Neural Networks, Artificial Intelligence and Data Mining.</p>
 
+            <strong>Current positions:</strong> If you are interested in working on the fields of deep learning for multimedia, vision and language understanding (visual question-answering, image-captioning, etc.) or neural representation learning, we are currently looking for motivated students.  
 
-            <strong>Academic degrees:</strong>
-             <p><strong>2016-Present</strong> Ph.D. in Computer Science at NOVA School of Science and Technology under the supervision of <a href="http://ctp.di.fct.unl.pt/~jmag/">Prof. João Magalhães</a>.</p>
-
-            <p><strong>2015</strong> M.Sc. in Computer Science by NOVA School of Science and Technology [<a
-                    href="https://run.unl.pt/bitstream/10362/16173/1/Semedo_2015.pdf" target="_blank">Thesis</a>]
-                [<a href="publications/cite/msc.bib" target="_blank">Bib</a>] under the supervision of <a
-                        href="http://userweb.fct.unl.pt/~pb/">Prof. Pedro Barahona</a> and
-                <a href="http://asc.di.fct.unl.pt/~pm/">Prof. Pedro Medeiros</a>.</p>
-
-            <p><strong>2013</strong> B.Sc. in Computer Science by NOVA School of Science and Technology.</p>
           </div>
         </div>
       </div>
     </section>
+
+    <section id="degrees">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <h2>Academic Degrees</h2>
+
+            <p><strong>2016-2020</strong> Ph.D. in Deep Learning for Multimedia, by NOVA School of Science and Technology, under the supervision of <a
+                        href="http://ctp.di.fct.unl.pt/~jmag/">Prof. João Magalhães</a>
+            <br><strong>Thesis: </strong>Bridging Vision and Language over Time with Neural Cross-modal Embeddings. [<a
+                    href="https://run.unl.pt/bitstream/10362/101656/1/Semedo_2020.pdf" target="_blank">Thesis</a>]
+                [<a href="publications/cite/phd.bib" target="_blank">Bib</a>] </br></p>
+
+            <p><strong>2015</strong> M.Sc. in Computer Science by NOVA School of Science and Technology, under the supervision of <a
+                        href="http://userweb.fct.unl.pt/~pb/">Prof. Pedro Barahona</a> and
+                <a href="http://asc.di.fct.unl.pt/~pm/">Prof. Pedro Medeiros</a>.
+                <br><strong>Thesis: </strong>A Public Transport Bus Assignment Problem: Parallel Metaheuristics Assessment. [<a
+                    href="https://run.unl.pt/bitstream/10362/16173/1/Semedo_2015.pdf" target="_blank">Thesis</a>]
+                [<a href="publications/cite/msc.bib" target="_blank">Bib</a>]  </br></p>
+
+            <p><strong>2013</strong> B.Sc. in Computer Science by NOVA School of Science and Technology.</p>
+        </div>
+      </div>
+    </section>
+
 
     <section id="publications"  class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Publications</h2>
+            <p><b>Adaptive Temporal Triplet-loss for Cross-modal Embedding Learning</b><br>
+                    <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2020, Seattle, USA, Oct. 2020.<br>
+                    [<a href="https://novasearch.org/temporal-cross-modal-embeddings/" target="_blank">Project Page (w/ Dataset)</a>]
+                    [PDF (To Appear)]
+                    [Bib]
+            </p>
             <p><b>Diachronic Cross-modal Embeddings</b><br>
                     <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2019, Nice, France, Oct. 2019.<br>
                     [<a href="https://novasearch.org/multimodal-diachronic-models/" target="_blank">Project Page (w/ Dataset)</a>]
@@ -223,6 +245,8 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Teaching</h2>
+            <p><strong>2020</strong> Computational Logic - B.Sc. Computer Science course.</p>
+             <p><strong>2019</strong> Algorithms and Data Structures - B.Sc. Computer Science course.</p>
             <p><strong>2018</strong> Web Search and Data Mining - M.Sc. Computer Science course. [<a href="http://ctp.di.fct.unl.pt/~jmag/ws/" target="_blank">Webpage</a>]</p>
             <p><strong>2016</strong> Lab Instructor at LxMLS - 2016 Lisbon Machine Learning Summer School. [<a href="http://lxmls.it.pt/2016/" target="_blank">Webpage</a>]</p>
             <p><strong>2015</strong> Algorithms and Data Structures - B.Sc. Computer Science course.</p>
