Changed navigation section color

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </nav>
 
-    <header class="bg-info text-white">
+    <header class="text-white" id="header_section">
       <div class="container">
         <div id="headerblob">
         <img src="media/photo.jpg" class="rounded imgme ">
