--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img src="media/photo.jpg" class="rounded imgme ">
         <div id="headertext" class="clearfix pl-5">
           <div id="htname" class="ligh_dark_text">David Semedo</div>
-          <div id="htdesc" class="ligh_dark_text">Ph.D. Researcher at NOVA University of Lisbon</div>
+          <div id="htdesc" class="ligh_dark_text">Ph.D. in Deep Learning for Multimedia - Researcher at NOVA University of Lisbon</div>
           <div id="htem" class="ligh_dark_text"><a class="email_link" href="mailto:df.semedo@fct.unl.pt">df.semedo@fct.unl.pt</a></div>
           <div id="htcv" class="ligh_dark_text"><a href="cv/cv_david.pdf" style="color:white" target="_blank"><strong>Curriculum Vitæ</strong></a></div>
           <div id="icons" >
