Added new publication

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
             <p><b>Adaptive Temporal Triplet-loss for Cross-modal Embedding Learning</b><br>
                     <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2020, Seattle, USA, Oct. 2020.<br>
                     [<a href="https://novasearch.org/temporal-cross-modal-embeddings/" target="_blank">Project Page (w/ Dataset)</a>]
-                    [PDF (To Appear)]
-                    [Bib]
+                    [<a href="https://dl.acm.org/doi/abs/10.1145/3394171.3413540" target="_blank">PDF</a>]
+                    [<a href="publications/cite/acm_3394171.3413540.bib" target="_blank">Bib</a>]
             </p>
             <p><b>Diachronic Cross-modal Embeddings</b><br>
                     <strong>David Semedo</strong>, and João Magalhães. ACM Multimedia 2019, Nice, France, Oct. 2019.<br>
